# Grafica-P2

./: README.md
E3-Objetos/: 2.2.basic_lighting.fs  BoundingVolume.h  CMakeLists.txt  Objeto.cpp  Objeto.h  glut_ply.cpp  main.cpp
